fix problems with overflow in cards

--- a/src/sass/_cards.scss
+++ b/src/sass/_cards.scss
@@ -2,54 +2,53 @@
   &__cards {
     margin-top: 5rem;
     padding: 2rem;
-    width: 100%;
-    // display: flex;
-    // flex-wrap: wrap;
-    // justify-content: space-between;
-    display: grid;
-    justify-items: center;
-    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-
-    // border: 1px solid white;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
   }
   &__card {
-    width: 23rem;
+    max-width: 25rem;
     background-color: $color-secondary2;
     margin-bottom: 3rem;
 
-    // display: flex;
-    // flex-direction: column;
-    // justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
     // NAVIGATION CARD
     &-nav {
-      height: 4rem;
+      // height: 4rem;
+      display: flex;
+      flex-wrap: wrap;
       justify-content: space-between;
       align-items: center;
-      display: flex;
       font-weight: 600;
       color: $color-primary;
       background-color: $color-primary2;
+      overflow-wrap: anywhere;
     }
     .card {
       &__word {
-        font-size: 2.8rem;
+        font-size: 2.5rem;
+        // padding: 0 0.5rem;
         margin-left: 1rem;
         text-transform: uppercase;
       }
-      &__phonetic {
-        width: 8rem;
-      }
+      // &__phonetic {
+      //   // height: auto;
+      // }
       &__btns {
         display: flex;
 
         align-items: center;
+        // padding: 0;
+        height: 4.5rem;
 
-        height: 4rem;
         // width: 4rem;
         button {
-          width: 4rem;
-          height: 4rem;
+          width: 4.5rem;
+          height: 4.5rem;
+          border: none;
         }
       }
     }
@@ -57,18 +56,24 @@
     &-body {
       height: 30rem;
       padding: 2rem;
+      // max-width: 25rem;
+      overflow-y: scroll;
     }
 
     .card {
       &__explanation {
-        font-size: 2.3rem;
+        display: flex;
+        flex-wrap: wrap;
         &--nr {
           @extend %btn-icon;
-          display: inline-block;
-          width: 4rem;
-          height: 4rem;
+          background-color: $color-primary3;
+          width: 2.5rem;
+          height: 2.5rem;
+          margin-right: 2rem;
+          font-size: 1.8rem;
         }
         &--word {
+          font-size: 2.5rem;
           font-weight: 600;
         }
         &--role {
@@ -84,7 +89,7 @@
     &-footer {
       display: flex;
       justify-content: flex-end;
-      padding: 1rem 1rem;
+      padding: 1rem 1.5rem;
 
       .more__btn {
         background-color: $color-secondary2;
